Pilkku pisteen sijaan
Vaihdoin pilkun yhden pisteen paikalle.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ $(document).ready(function () {
 <li><a href="#hajontakuvia-ja-korrelaatioita-seka-diagnostisia">hajontakuvia ja korrelaatioita sekä diagnostisia</a></li>
 <li><a href="#kuvia-siirrettya-rstudiosta-chapter.rmd-tiedostoon">kuvia, siirrettyä Rstudiosta chapter.Rmd-tiedostoon</a></li>
 <li><a href="#ja-sita-kautta-paivakirjaan.-kuvien-tulkinta">ja sitä kautta päiväkirjaan. Kuvien tulkinta</a></li>
-<li><a href="#on-kuitenkin-mukana-paivakirjassa.-toivottavasti">on kuitenkin mukana päiväkirjassa. Toivottavasti</a></li>
+<li><a href="#on-kuitenkin-mukana-paivakirjassa-toivottavasti">on kuitenkin mukana päiväkirjassa, toivottavasti</a></li>
 <li><a href="#vertaisarvioija-jaksaa-lukea-kuvien-tulkinnan-vaikka">vertaisarvioija jaksaa lukea kuvien tulkinnan vaikka</a></li>
 <li><a href="#kuvat-puuttuvat.-pahoittelen-myos-etta-paivakirja">kuvat puuttuvat. Pahoittelen myös että päiväkirja</a></li>
 <li><a href="#nayttaa-kummalliselta.">näyttää kummalliselta.</a></li>
@@ -307,8 +307,8 @@ $(document).ready(function () {
 <div id="ja-sita-kautta-paivakirjaan.-kuvien-tulkinta" class="section level1">
 <h1>ja sitä kautta päiväkirjaan. Kuvien tulkinta</h1>
 </div>
-<div id="on-kuitenkin-mukana-paivakirjassa.-toivottavasti" class="section level1">
-<h1>on kuitenkin mukana päiväkirjassa. Toivottavasti</h1>
+<div id="on-kuitenkin-mukana-paivakirjassa-toivottavasti" class="section level1">
+<h1>on kuitenkin mukana päiväkirjassa, toivottavasti</h1>
 </div>
 <div id="vertaisarvioija-jaksaa-lukea-kuvien-tulkinnan-vaikka" class="section level1">
 <h1>vertaisarvioija jaksaa lukea kuvien tulkinnan vaikka</h1>
