--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ $(document).ready(function () {
 <li><a href="#on-kuitenkin-mukana-paivakirjassa-toivottavasti">on kuitenkin mukana päiväkirjassa, toivottavasti</a></li>
 <li><a href="#vertaisarvioija-jaksaa-lukea-kuvien-tulkinnan-vaikka">vertaisarvioija jaksaa lukea kuvien tulkinnan vaikka</a></li>
 <li><a href="#kuvat-puuttuvat.-pahoittelen-myos-etta-paivakirja">kuvat puuttuvat. Pahoittelen myös että päiväkirja</a></li>
-<li><a href="#nayttaa-kummalliselta.">näyttää kummalliselta.</a></li>
+<li><a href="#nayttaa-kummalliselta.-fontti-on-liian-suuri.">näyttää kummalliselta. Fontti on liian suuri.</a></li>
 <li><a href="#aineistossa-on-166-havaintoyksikkoa-ja-seitseman-muuttujaa.">Aineistossa on 166 havaintoyksikköä ja seitsemän muuttujaa.</a></li>
 <li><a href="#muuttujat-age-attitude-points-ovat-numeerisia">Muuttujat Age, Attitude, Points ovat numeerisia</a></li>
 <li><a href="#kokonaislukumuuttujia-ja-ne-kertovat-henkilon-ian-asenteen">kokonaislukumuuttujia ja ne kertovat henkilön iän, asenteen</a></li>
@@ -316,8 +316,8 @@ $(document).ready(function () {
 <div id="kuvat-puuttuvat.-pahoittelen-myos-etta-paivakirja" class="section level1">
 <h1>kuvat puuttuvat. Pahoittelen myös että päiväkirja</h1>
 </div>
-<div id="nayttaa-kummalliselta." class="section level1">
-<h1>näyttää kummalliselta.</h1>
+<div id="nayttaa-kummalliselta.-fontti-on-liian-suuri." class="section level1">
+<h1>näyttää kummalliselta. Fontti on liian suuri.</h1>
 <p>learning2014=read.table(“data/learning2014.txt”, sep = “,”, header = TRUE)</p>
 <p>str(learning2014)</p>
 <p>dim(learning2014)</p>
