--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@ plot(malli2, which = c(1,2,5))</code></pre>
 <p>Kolmannesta kuvasta, jossa on vipuvoima eli Cookin etäisyys x-akselilla ja standardoidut residuaalit y-akselilla voidaan päätellä vipuvoiman suuruus. Vipuvoima mittaa sitä kuinka paljon yhdellä havainnolla on vaikutusta malliin. Hajontakuva jossa on residuaalit ja vipuvoima voi auttaa tunnistamaan ne havainnot joilla on poikkeuksellisen paljon vaikutusta malliin. Kuvasta nähdään että havainto joka saa suurimman vipuvoiman tai Cookin etäisyyden arvon saa suunnilleen arvon 0.05. Luku on sen verran pieni että vipuvoiman mallissa kaksi voidaan sanoa olevan tavallista tai pientä.</p>
 <p>Muita lineaarisen regressiomallin oletuksia ovat virheiden normaalisuuden ja vakion varianssin lisäksi oletukset että virheet eivät korreloi eivätkä riipu selittävistä muuttujista.</p>
 <hr />
+<p>En saanut vietyä tätä tiedostoa Github-päiväkirjaan. Julkaisin sen R:n palvelun kautta, toivottavasti tehtäväni voidaan hyväksyä.</p>
 <pre class="r"><code>alc=read.table(&quot;data/alc.txt&quot;, sep = &quot;,&quot;, header = TRUE)
 
 head(alc)</code></pre>
